Sun Apr 14 11:59:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/SPIPE_Addr.h:
        * ace/Filecache.h:
        * ace/Time_Request_Reply.h:
        * ace/TLI.h:
          Doxygen-ized some of the comments

Sat Apr 13 19:28:40 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/Basic_Types.h:  Added include of pthread.h to pick
	  up typedef of pthread_key_t.

Sat Apr 13 17:16:10 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* examples/Service_Configurator/IPC-tests/server/Handle_L_SPIPE.h:
	* examples/ASX/CCM_App/CCM_App.cpp:

	  Added include of svc_export.h.

Sat Apr 13 15:42:03 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* tests/DLL_Test.{h,cpp}:
	* tests/DLL_Test_Impl.{h,cpp}:  Added methods to test the
	  the malloc/free and strnew/strdelete methods below.  Also
	  removed use auto_ptr and added a destroy method to delete
	  the object within the dll/heap it was allocated.

	* ace/OS_Memory.{inl,cpp}:  Changed malloc(), calloc()
	  realloc(), and free() to be non-inlined to avoid the heap
	  problem on Windows.

	* ace/ACE.{h,i,cpp}: Changed strnew() to be non-inlined and
	  added strdelete() for the same reason.

Sat Apr 13 14:33:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Configuration.h:
        * ace/Containers_T.h:
        * ace/High_Res_Timer.h:
        * ace/Object_Manager.h:
        * ace/Reactor.h:
        * ace/Reactor_Impl.h:
        * ace/Select_Reactor_T.h:
        * ace/WFMO_Reactor.h:
          Improved doxygen comments. Added @deprecated to methods that
          are deprecated so that in the doxygen description this is also
          clearly list.

Sat Apr 13 03:32:52 2002  Krishnakumar B  <kitty@cs.wustl.edu>

        * ace/Proactor.h:

          Moved OS.h and ACE_export.h outside the #ifdef ACE_WIN32.
          ACE_export.h beacuse the #else part uses it and OS.h because
          sig_atomic_t is used in one of the dummy class's signatures. If